# fbsim-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  hierarchy.html  index.html  modules.html  package.json  test-browser.html  typedoc.json
.github/workflows/: build.yaml  lint.yaml  release.yaml  sec.yaml  test.yaml
assets/: highlight.css  navigation.js  search.js
classes/: FootballTeam.html  FootballTeamCoach.html  FootballTeamDefense.html  FootballTeamOffense.html  Game.html  GameSimulator.html  League.html  LeagueConference.html  LeagueDivision.html  LeagueSeason.html  Rng.html
docs/: game.md  league-sim.md  league.md  team.md
docs/game/: context.md  matchup.md  play.md  score.md  stat.md
docs/game/play/: call.md  context.md  result.md
docs/game/play/result/: betweenplay.md  fieldgoal.md  kickoff.md  pass.md  punt.md  run.md
docs/game/score/: freq.md
docs/league/: matchup.md  season.md  team.md
docs/league/season/: conference.md  matchup.md  playoffs.md  team.md  week.md
docs/league/season/playoffs/: picture.md
docs/team/: coach.md  defense.md  offense.md
functions/: createGameContext.html  default.html  getVersion.html  init.html  initSync.html
interfaces/: BetweenPlayResult.html  Drive.html  FieldGoalResult.html  GameContext.html  InitOutput.html  KickoffResult.html  LeagueSeasonMatchup.html  LeagueSeasonPlayoffOptions.html  LeagueSeasonPlayoffs.html  LeagueSeasonScheduleOptions.html  LeagueSeasonWeek.html  LeagueTeam.html  LeagueTeamRecord.html  OffensiveStats.html  PassResult.html  PassingStats.html  Play.html  PlayResultComputed.html  PlayoffPicture.html  PlayoffPictureEntry.html  PlayoffPictureOptions.html  PlayoffTeam.html  PlayoffTeams.html  PuntResult.html  ReceivingStats.html  RunResult.html  RushingStats.html
scripts/: inject-jsdoc.mjs
src/: boxscore.rs  freq.rs  game.rs  gen.rs  league.rs  lib.rs  matchup.rs  sim.rs  team.rs
src/game/: context.rs  matchup.rs  play.rs  score.rs  stat.rs
src/game/play/: call.rs  context.rs  result.rs
src/game/play/result/: betweenplay.rs  fieldgoal.rs  kickoff.rs  pass.rs  punt.rs  run.rs
src/game/score/: freq.rs
src/league/: matchup.rs  matchups.rs  season.rs  team.rs
src/league/season/: conference.rs  matchup.rs  playoffs.rs  team.rs  week.rs
src/league/season/playoffs/: picture.rs
src/team/: coach.rs  defense.rs  offense.rs
src/wasm/: conference.rs  game.rs  league.rs  mod.rs  play.rs  rng.rs  season.rs  team.rs
types/: DriveResult.html  InitInput.html  PlayTypeResult.html  PlayoffStatus.html  ScoreResult.html  SyncInitInput.html
