[package]
name = "fbsim-core"
version = "1.0.0-alpha.15"
authors = ["whatsacomputertho"]
edition = "2021"
description = "A library for american football simulation"
readme = "README.md"
homepage = "https://doc.rs/fbsim-core"
repository = "https://github.com/whatsacomputertho/fbsim-core"
license-file = "LICENSE"
keywords = ["football","simulation","model","library","fbsim"]
categories = ["games","simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
lazy_static = "1.5.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rocket_okapi = { version = "0.9.0", features = ["swagger"], optional = true }
serde = { version = "1.0.217", features = ["derive"] }
statrs = "0.18.0"

[features]
rocket_okapi = ["dep:rocket_okapi"]
