[package]
name = "fbsim-core"
version = "1.0.0-beta.2"
authors = ["whatsacomputertho"]
edition = "2021"
description = "A library for american football simulation"
readme = "README.md"
homepage = "https://docs.rs/fbsim-core"
repository = "https://github.com/whatsacomputertho/fbsim-core"
license-file = "LICENSE"
keywords = ["football","simulation","model","library","fbsim"]
categories = ["games","simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
lazy_static = "1.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18.0"

# Rocket dependencies (optional)
rocket_okapi = { version = "0.9.0", features = ["swagger"], optional = true }
time = { version = "0.3.47", optional = true } # Overrides rocket dependency
tokio = { version = "1.49.0", optional = true } # Overrides rocket dependency
tracing-subscriber = { version = "0.3.22", optional = true } # Overrides rocket dependency
bytes = { version = "1.11.1", optional = true } # Overrides rocket dependency

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tsify-next = { version = "0.5", optional = true, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
rocket_okapi = [
    "dep:rocket_okapi",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:bytes"
]
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:getrandom",
    "dep:console_error_panic_hook",
    "dep:tsify-next",
]

[profile.release]
lto = true
opt-level = "s"
